--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
     --font-B: "Roboto-black";
     --font-background-articles: #03122F;
     --background--rating: #b50a26;
+    --list-image-width: ;
 }
 
 body {
@@ -166,24 +167,25 @@ footer {
 /* movies.html, tvshows.html and videogames.html */
 
 .list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    color: white;
-
+    display: grid;
+    grid-template-columns: 1fr;
 }
 .list__title {
+    width: 300px;
     position: relative;
     margin: 15px;
-    padding: 15px;
+    padding-top: 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+    justify-self: center;
     
 }
 .list__title img {
+    display: block;
     height: 300px;
-    margin-left: 15px;
-    margin-right: 15px;
+    width: var(--list-image-width);
+    object-fit:inherit;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 15px;
     margin-bottom: 5px;
 }
@@ -209,7 +211,7 @@ footer {
 .list__title__description {
     margin-left: 15px;
     margin-right: 15px;
-    text-overflow: ellipsis;
+    color: white;
 
 }
 .list__title__description__name {
@@ -222,8 +224,45 @@ footer {
 }
 
 
-/* Movies */
+/*Styles for all movies, shows and videogames*/
 
+
+.title__header{
+    background-color: white;
+    display: flex;
+    justify-content:space-between;
+    margin: 20px;
+}
+.title__header__name{
+    align-self: center;
+    margin-left: 20px;
+    background-color: white;
+    font-size: 30px;
+    color: black;
+}
+.title__header__rating{
+    padding: 15px;
+    align-self: center;
+    background-color: #b50a26;
+    color: white;
+
+}
+.title__description {
+    margin: 20px;
+    background-color: white;
+    padding: 10px;
+    text-overflow:clip;
+}
+.title__description img {
+    display: block;
+    width: 25vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
+.title__description > p {
+    text-align: justify;
+}
 @media screen and (min-width: 624px) {
     .nav-primary__links {
         display: flex;
@@ -259,5 +298,6 @@ footer {
     }
     .list {
         margin-left: 20%;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
