--- a/style.css
+++ b/style.css
@@ -263,7 +263,9 @@ footer {
 .title__description > p {
     text-align: justify;
 }
-.title__comments__comment{
+.title__user-comment{
+    width: fit-content;
+    margin: auto;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 30px 1fr;
@@ -275,15 +277,18 @@ footer {
     padding: 10px;
     border-radius: 10px;
 }
-.title__comments__comment > header {
+.title__user-comment > header {
     grid-area: "header";
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px;
 }
-.title__comments__comment > form {
+.title__user-comment > form {
     grid-area: "form" ;
     justify-content: end;
 }
-.title__comments__comment textarea {
-    grid-area: "textarea";
+.title__user-comment textarea {
     height: 100px;
     margin: 5px;
     aspect-ratio: 2;
@@ -292,16 +297,52 @@ footer {
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
     border-radius: 2px;
 }
-.title__comments__comment button {
+.title__user-comment button {
     display: block;
     margin: 5px;
     padding: 5px 7px;
     justify-self: end;
     color: white;
-    background-color:#03122F;
+    background-color:#082869;
     border: none;
     border-radius: 8px;
     cursor: pointer;
+}
+.title__user-comment button:hover {
+    background-color:#051a44 ;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    transition: background 0.1s ease;
+}
+.title__user-comment__rating {
+    width:20%;
+    border: none;
+    border-radius: 1px;
+    
+}
+.title__comments__comment {
+    width: fit-content;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 30px 1fr;
+    grid-template-areas: "header"
+                         "review";
+    background-color: white;
+    border: #03122F 1px solid;
+    width: min-content;
+    padding: 10px;
+    border-radius: 10px;
+}
+.title__comments__comment > header {
+    grid-area: "header";
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px;
+}
+.title__comments__comment > p {
+    grid-area: "review";
+    margin: 5px;
+    text-align: justify;
 }
 @media screen and (min-width: 624px) {
     .nav-primary__links {
