--- a/style.css
+++ b/style.css
@@ -228,6 +228,8 @@ footer {
 
 
 .title__header{
+    position: sticky;
+    top: 10px;
     background-color: white;
     display: flex;
     justify-content:space-between;
@@ -261,11 +263,15 @@ footer {
     margin-bottom: 10px;
 }
 .title__description > p {
+    padding: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     text-align: justify;
 }
 .title__user-comment{
-    width: fit-content;
+    width: calc(90% - 20px);
+    aspect-ratio: 2;
     margin: auto;
+    margin-bottom: 20px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 30px 1fr;
@@ -273,10 +279,10 @@ footer {
                          "form";
     background-color: white;
     border: #03122F 1px solid;
-    width: min-content;
     padding: 10px;
     border-radius: 10px;
 }
+
 .title__user-comment > header {
     grid-area: "header";
     display: flex;
@@ -289,13 +295,16 @@ footer {
     justify-content: end;
 }
 .title__user-comment textarea {
-    height: 100px;
-    margin: 5px;
+    width: 90%;
     aspect-ratio: 2;
+    margin: 10px;
+    padding: 3px;
     resize: none;
     border: none;
     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
     border-radius: 2px;
+    text-overflow: ellipsis;
+    text-align: justify;
 }
 .title__user-comment button {
     display: block;
@@ -314,13 +323,21 @@ footer {
     transition: background 0.1s ease;
 }
 .title__user-comment__rating {
-    width:20%;
+    font-size: 16px;
+    width:20px;
     border: none;
     border-radius: 1px;
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
     
 }
+.title__comments {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .title__comments__comment {
-    width: fit-content;
+    width: calc(90% - 20px);
+    aspect-ratio: 2;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 30px 1fr;
@@ -328,21 +345,34 @@ footer {
                          "review";
     background-color: white;
     border: #03122F 1px solid;
-    width: min-content;
     padding: 10px;
+    margin: 10px;
     border-radius: 10px;
 }
-.title__comments__comment > header {
+.title__comments__comment header {
     grid-area: "header";
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 5px;
 }
-.title__comments__comment > p {
+.title__comments__comment p {
     grid-area: "review";
     margin: 5px;
     text-align: justify;
+}
+.title__comments__other-comments h2{
+    color:white;
+    font: var(--font-B);
+    margin-left: 20px;
+    font-size: 30px;
+}
+.title__description__info {
+    text-align: justify;
+}
+#title__description__info--bold {
+    font: var(--font-B);
+    font-weight: 600;
 }
 @media screen and (min-width: 624px) {
     .nav-primary__links {
