--- a/style.css
+++ b/style.css
@@ -522,7 +522,44 @@ footer {
     text-align: right;
     margin-top: 5px;
 }
-
+.news__aside-opener{
+    width: 100%;
+    height: 50px;
+    cursor: pointer;
+}
+.news__aside-opener > img {
+    height: 30px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.news__aside-opener:hover {
+    background-color: black;
+}
+.news__aside-opener:hover > img {
+    filter: invert(1);
+}
+.news__opener--package{
+    position: sticky;
+    top: 0;
+}
+.news__aside{
+    display: none;
+    height: fit-content;
+    background-color: var(--color-element-A);
+    color: white;
+    padding: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+.news__aside__sort{
+    margin-bottom: 15px;
+}
+.news__aside__sort::first-line{
+    font-size: 20px;
+    font-weight: 600;
+}
+.news__aside__newsletter > label{
+    margin-right: 10px;
+}
 /* article.html */
 .article__author {
     height: 100px;
