--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     border-bottom: white solid 1px;
 }
 
-.nav-primary a {
+.nav-primary a, #ul__login {
     display: block;
     color: white;
     text-decoration: none;
@@ -55,6 +55,9 @@ body {
     padding-top: auto;
     padding-bottom: auto;
     font-size: 1rem;
+}
+#ul__login{
+    display: none;
 }
 
 .nav-primary a:hover {
@@ -65,7 +68,7 @@ body {
     border-radius: 5px;
 }
 
-.nav-primary a[href="login.html"] {
+#login_under_ul {
     display: block;
     float: right;
     margin: 8px;
@@ -150,13 +153,14 @@ footer {
     background-color: #fffe;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-#registration__back{
+#registration__back{    
     display: block;
     width: 40px;
     filter: invert(1);
     padding: 5px;
     top:0;
     left: 0;
+    cursor: pointer;
 }
 #registration__back:hover{
     filter: none;
@@ -694,6 +698,14 @@ footer {
     margin: 5px;
     text-align: justify;
 }
+@media screen and (max-width: 371px) {
+    #ul__login{
+        display: block;
+    }
+    #login_under_ul{
+        display: none;
+    }
+}
 @media screen and (min-width: 425px) {
     .login form {
         grid-template-columns: 40% 60%;
@@ -842,5 +854,14 @@ footer {
     }
     .news article header{
         text-align: left;
+    }
+    .news__aside-opener{
+        display: none;
+    }
+    .news__aside {
+        display: block;
+        float: right;
+        width: 30%;
+        height: 100vh;
     }
 }
