--- a/style.css
+++ b/style.css
@@ -337,23 +337,32 @@ footer {
     margin: 10px;
     padding: 10px;
 }
-#title__description__info--bold {
+#title__description--bold {
     font: var(--font-B);
     font-weight: 600;
 }
 .title__description__about {
     display: none;
-    padding: 10px;
+    margin: 10px;
+    padding: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     text-align: justify;
 }
 .title__description__platforms{
+    margin: 10px;
     display: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .title__description__episodes{
     display: none;
 }
+.title__description__howlongtobeat{
+    margin: 10px;
+    padding: 10px;
+    display: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
 .title__description__episodes select{
     margin-top: 20px;
     margin-left: 20px;
@@ -393,6 +402,7 @@ footer {
     grid-area: "form" ;
     justify-content: end;
 }
+
 .title__user-comment textarea {
     width: 90%;
     aspect-ratio: 2;
