--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
 }
 :ROOT {
     --color-background-A: #19305C;
-    --color-element-A: #03122F;
+    --color-element-A: #F3A712;
+    --color-element-B: #2E3138;
     --font: "Roboto";
     --font-M: "Roboto-medium";
     --font-B: "Roboto-black";
@@ -33,20 +34,24 @@ body {
     background-color: var(--color-background-A);
 }
 .nav-primary {
-    background-color: var(--color-element-A);
-    border: black 1px solid;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    overflow: hidden;
+    font-family: roboto;
+    height: fit-content;
+    border: 1px solid black;
+    background-color: var(--color-element-B);
 }
-
-.nav-primary__links {
+.nav-primary__navbar{
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100%;
+    align-items: center;
+}
+.nav-primary__links{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    border-bottom: white solid 1px;
+    list-style: none;
 }
-
-.nav-primary a, #ul__login {
+.nav-primary__links a {
     display: block;
     color: white;
     text-decoration: none;
@@ -56,58 +61,73 @@ body {
     padding-bottom: auto;
     font-size: 1rem;
 }
-#ul__login{
-    display: none;
+#login{
+    color: white;
+    text-decoration: none;
+    margin: 5px;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 5px;
 }
-
-.nav-primary a:hover {
-    color: black;
+.nav-primary__form_login {
+    margin: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.nav-primary__form_login form{
+    width: 150px;
+    display: flex;
     background-color: white;
-    transition: color 0.1s ease-in;
-    transition: background 0.1s ease;
-    border-radius: 5px;
-}
-
-#login_under_ul {
-    display: block;
-    float: right;
-    margin: 8px;
-}
-
-#nav-primary__search {
-    margin: 1rem;
-    display: inline-block;
-}
-
-#nav-primary__search {
-    margin: 1rem;
-}
-
-#nav-primary__search input {
-    border-radius: 5px;
-    height: 30px;
-}
-
-#nav-primary__search input[type="button"] {
-    background-color: var(--color-element-A);
-    color: whitesmoke;
-    font-family: var(--font-A);
-}
-
-#nav-primary__search input[type="button"]:hover {
-    background-color: #01050e;
-    transition: background 0.1s ease;
-    transition: color 0.1s ease;
-    cursor: pointer;
-}
-
-#nav-primary__search input[type="text"] {
+    border-radius: 10px;
     margin-right: 10px;
 }
-
-#nav_primary__search input[type="text"] {
-    padding: 0.5rem 0.625rem;
+.nav-primary__form_login form input {
+    width: 80%;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    background-color: white;
 }
+.nav-primary__form_login form button {
+    padding: 10px;
+    border-radius: 4px 10px 10px 4px ;
+    border: none;
+    background-color: white;
+}
+.nav-primary__form_login form button:hover{
+    background-color: silver;
+    cursor: pointer;
+    outline: 3px solid black;
+}
+.nav-primary__form_login form button img {
+    width: 15px;
+}
+.nav-primary__form_login form input:focus{
+    outline: none;
+}
+.nav-primary__form_login form:hover, .nav-primary__form_login form:focus-within{
+    outline: 3px solid black;
+}
+.nav-primary__links a:hover {
+    background-color: white;
+    color: black;
+}
+#login{
+    background-color: orange;
+    margin: 5px;
+            padding: 10px;
+            padding-left: 15px;
+            padding-right: 15px;
+            border-radius: 5px;
+}
+#login:hover{
+    background-color: rgb(255, 180, 42);
+    outline: 3px solid black;
+    transform: scale(1.05);
+}
+
 
 footer {
     background-color: var(--color-element-A);
@@ -115,19 +135,40 @@ footer {
     color: white;
 }
 
-/*login.html and registration.html*/
+/* login.html */
 
+.main--login{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .login {
+
+    height: 350px;
+    width: 250px;
     color: white;
-    background-color: var(--color-element-A);
-    padding: 50px;
+    background-color: var(--color-element-B); 
     border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
+    padding: 25px;
+    outline: 5px solid white;
+}
+.login__back {
+    float: right;
+    height: 32px;
+    border-radius: 5px;
+}
+.login__back:hover {
+    background-color: var(--color-element-B);
+}
+.login__back:hover > img {
+    filter: none;
+    transform: scale(1.01);
+}
+.login a img {
+    height: 32px;
+    filter: invert(1);
 }
 .login form {
     display: grid;
@@ -136,44 +177,92 @@ footer {
     padding: 15px;
     color: white;
 }
+.login label{
+    text-align: left;
+    margin-left: 5px;
+}
 .login form input {
-    background-color: white;
     border: none;
     padding: 5px;
     border-radius: 5px;
-    color: black;
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 5px;
 }
 
 .login form button {
+    color: white;
     border-radius: 5px;
     padding: 5px 10px;
     margin: 5px;
     font-size: 1rem;
-    background-color: white;
+    background-color: var(--color-element-A);
     cursor: pointer;
     justify-self: center;
 }
 .login form button:hover {
-    background-color: #fffe;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    transform: scale(1.05);
+    background-color: #ecac2b;
 }
-#login__back{    
-    display: block;
-    width: 40px;
-    filter: invert(1);
+
+
+/* registration.html */
+
+.main--registration{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.registration{
+    height: 450px;
+    width: 250px;
+    color: white;
+    background-color: var(--color-element-B); 
+    border-radius: 15px;
+    text-align: center;
+    padding: 25px;
+    outline: 5px solid white;
+}
+
+.registration form {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 5px;
+    padding: 15px;
+    color: white;
+}
+.registration label{
+    text-align: left;
+    margin-left: 5px;
+}
+.registration form input {
+    border: none;
     padding: 5px;
-    top:0;
-    left: 0;
-    cursor: pointer;
-}
-#login__back:hover{
-    filter: none;
-    background-color: white;
     border-radius: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
 }
+
+.registration form button {
+    color: white;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin: 15px;
+    font-size: 1rem;
+    background-color: var(--color-element-A);
+    cursor: pointer;
+    justify-self: center;
+}
+.registration form button:hover {
+    transform: scale(1.05);
+    background-color: #ecac2b;
+}
+
+
 /* movies.html, tvshows.html and videogames.html */
 #btn--filter{
     background-color: white;
@@ -196,22 +285,59 @@ footer {
 
 }
 .filters {
-    padding: 20px;
     display: none;
     color: white;
-    background-color: var(--color-element-A);
+    background-color: var(--color-element-B);
 
 }
-.filters::first-line {
-    font-weight: 600;
-    font-size: 24px;
+.filters h2{
+    color: var(--color-element-A);
 }
+.filters form {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+.filters__form__year, .filters__form__rating{
+    border-top: 1px solid white;
+    margin-bottom: 10px;
+}
+.filters__form__platforms, .filters__form__genre{
+    border-top: 1px solid white;
+    margin-bottom: 10px;
+}
+.filters__form__platforms > div, .filters__form__genre > div {
+    display: grid;
+    grid-template-columns: 40% 1fr;
+}
+.filters__form__platforms > div label, .filters__form__genre > div label {
+    margin: 10px;
+}
+.filters form input[type = "checkbox"]{
+    display: inline-block;
+    appearance: none;
+    -webkit-appearance: none; 
+    padding: 10px;
+    margin-bottom: auto;
+    margin-top: auto;
+    margin-right: 10px;
+    background-color: white; 
+    border-radius: 5px;
+    cursor: pointer;
+}
+.filters form input[type = "checkbox"]:checked {
+    background-color: var(--color-element-A);
+    border-color: #FFDAB9;
+
+  }
 
 .list {
     display: grid;
     grid-template-columns: 1fr;
 }
 .list__title {
+    background-color: var(--color-element-B);
+    display: grid;
+    grid-template-columns: 1fr;
     width: 300px;
     position: relative;
     margin: 15px;
@@ -222,9 +348,7 @@ footer {
     
 }
 .list__title:hover {
-    transform: scale(1.05);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
+    transform: scale(1.01);
 }
 .list__title__picture {
     width: fit-content;
@@ -248,32 +372,44 @@ footer {
     position: absolute;
     font: var(--font-B);
     font-size: 1.5rem;
+    font-weight: 600;
     color: black;
     z-index: 1px;
     top: 0.8rem;
     left: 0;
     padding: 0.8rem;
-    background-color:var(--background--rating);
+    background-color:var(--color-element-A);
     border-bottom-right-radius: 2px;  
 }
 .list__title__picture:hover  .list__title__rating{
     display: none;
 }
 .list__title__description {
-    width: fit-content;
     display: block;
     margin: auto;
     padding-bottom: 30px;
     color: white;
-
+    
+}
+.list__title__description__info{
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .list__title__description__name {
-    color: black;
+    color: var(--color-element-A);
     font: var(--font-B);
     font-size: 24px;
     margin-bottom: 10px;
-    text-justify: center;
-
+    text-align: center;
+}
+.list__title__description strong {
+    color: var(--color-element-A);
+    font-family: var(--font-B);
+    font-size: 1rem;
 }
 .list a {
     text-decoration: none;
@@ -285,31 +421,35 @@ footer {
 .title__header{
     position: sticky;
     top: 10px;
-    background-color: white;
+    background-color: var(--color-element-B);
     display: flex;
     justify-content:space-between;
     margin: 20px;
+    border-radius: 5px;
 }
 .title__header__name{
     align-self: center;
     margin-left: 20px;
-    background-color: white;
     font-size: 30px;
-    color: black;
+    color: white;
 }
 .title__header__rating{
     padding: 15px;
     align-self: center;
-    background-color: #b50a26;
-    color: white;
+    background-color: var(--color-element-A);
+    color: black;
+    font-weight: 600;
+    font-size: 20px;
+    border-radius: 0 5px 5px 0;
 
 }
 .title__description {
     border-radius: 10px;
     margin: 20px;
-    background-color: white;
+    background-color: var(--color-element-B);
     padding: 10px;
-    text-overflow:clip;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .title__description img {
     display: block;
@@ -319,28 +459,31 @@ footer {
     margin-bottom: 10px;
 }
 .title__description__btns {
+    background-color: var(--color-element-A);
     margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
-    justify-content: flex-start;
+    justify-items: center;
+    align-items: center;
     width: 100%;
     height: 50px;
 }
 .title__description__btns button {
-    background-color: var(--color-background-A);
-    color: white;
+    background-color: var(--color-element-A);
+    color: black;
     font-size: 1rem;
     margin: 5px;
     padding: 5px 10px;
     border-radius: 10px;
     cursor: pointer;
+    border: none;
 }
 .title__description__btns button:hover {
-    background-color: #23437d ;
+    color: white;
+    background-color: var(--color-element-B);
 }
 .title__description__info {
     display: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     text-align: justify;
     margin: 10px;
     padding: 10px;
@@ -348,27 +491,32 @@ footer {
 #title__description--bold {
     font: var(--font-B);
     font-weight: 600;
+    color: var(--color-element-A);
 }
 .title__description__about {
     display: none;
     margin: 10px;
     padding: 5px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     text-align: justify;
 }
 .title__description__platforms{
     margin: 10px;
     display: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 .title__description__episodes{
     display: none;
+}
+.title__description__episodes select {
+    color: white;
+    background-color: var(--color-element-B);
+    border-radius: 5px;
 }
 .title__description__howlongtobeat{
     margin: 10px;
     padding: 10px;
     display: none;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 .title__description__episodes select{
@@ -721,16 +869,22 @@ footer {
     margin: 5px;
     text-align: justify;
 }
-@media screen and (max-width: 380px) {
-    #ul__login{
-        display: block;
+@media screen and (min-width: 359px) {
+    .nav-primary__form_login form input{
+        width: none;
     }
-    #login_under_ul{
-        display: none;
+    .nav-primary__form_login form{
+        width: fit-content;
+    }
+    .nav-primary__form_login{
+        justify-content: center;
     }
 }
 @media screen and (min-width: 425px) {
     .login form {
+        grid-template-columns: 40% 60%;
+    }
+    .registration form {
         grid-template-columns: 40% 60%;
     }
     .login form label {
@@ -741,6 +895,12 @@ footer {
     .login form label {
         align-content: center;
     }
+    .login {
+        width: 350px;
+    }
+    .registration {
+        width: 350px;
+    }
 }
 @media screen and (min-width: 586px) {
     .article__user-comment{
@@ -750,18 +910,24 @@ footer {
         width: 60%;
     }
 }
-@media screen and (min-width: 624px) {
-    /* navbar */
-    .nav-primary__links {
+@media screen and (min-width: 603px) {
+    .nav-primary__links{
         display: flex;
-        flex-wrap: nowrap;
         justify-content: space-evenly;
-
+        align-content: center;
     }
-    .nav-primary__links li {
-        margin-top: 15px;
-        margin-bottom: 15px;
+    .nav-primary__links a {
+        color: white;
+        text-decoration: none;
+        margin: 5px;
+        padding: 15px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 5px;
     }
+    
+}
+@media screen and (min-width: 624px) {
     /*movies.html, show.html and videogames.html*/
     .list{
         grid-template-columns: repeat(2, 1fr);
@@ -784,10 +950,6 @@ footer {
     }
 }
 @media screen and (min-width: 750px) {
-    /*navbar*/
-    .nav-primary__links {
-        justify-content: flex-start;
-    }
 
     /* article.html */
     .main--article article {
@@ -801,6 +963,17 @@ footer {
         width: 400px;
     }
 
+}
+@media screen and (min-width: 800px) {
+    .nav-primary__navbar{
+        grid-template-columns: 75% 25%;
+    }
+    .nav-primary__links{
+        justify-content: left;
+    }
+    .news{
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 @media screen and (min-width: 978px) {
     
